Implemented and integrated DTOFactory for centralized DTO creation, refactored services and controllers to utilize factory methods, removed redundant DTOs, and ensured consistency across the application.